# alacritty_vello

./: AUTHORS  CHANGELOG.md  Cargo.toml  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
alacritty_vello/: Cargo.toml  README.md
alacritty_vello/src/: lib.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
