[package]
name = "alacritty_vello"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A crate for working with alacritty and Vello."
keywords = ["terminal", "graphics", "ui"]
categories = ["graphics", "terminal"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]

[lints]
workspace = true
