[package]
name = "simple"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1.0.97"
alacritty_vello.workspace = true
pollster = "0.4.0"
vello = "0.4.1"
winit = "0.30.8"

[lints]
workspace = true
